[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sarsa"
version = "0.1.0"
description = "SARSA toolkit for fitting behavioural datasets"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Yuan Zhao", email = "yuan.zhao@nih.gov"},
]

dependencies = [
    "numpy>=2.2.4",
    "scipy>=1.15.2",
]

[project.urls]
Repository = "https://github.com/yuanz271/sarsa"

[project.optional-dependencies]
examples = [
    "jupyterlab>=4.2.0,<5",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "pandas>=2.3.3",
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sarsa"]

[tool.hatch.build.targets.sdist]
include = [
    "src/sarsa",
    "README.md",
    "CHANGELOG.md",
    "pyproject.toml",
]
